--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,5 +1,15 @@
 {
   "app_name": "ARestro",
   "sign_up": "انشاء حساب",
-  "log_in": "تسجيل الدخول"
+  "log_in": "تسجيل الدخول",
+  "email": "الايميل",
+  "password": "الرقم السري",
+  "email_example":"example@gmail.com",
+  "enter_pass": "أدخل الرقم السري",
+  "remember_me": "تذكرني",
+  "forget_pass": "هل نسيت الرقم السري؟",
+  "or_continue_with": "or continue with",
+  "login_with_google":"تسجيل الدخول بجوجل",
+  "do_not_have_account": "هل لا تمتلك حساب ؟"
+
 }
