--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,5 +1,14 @@
 {
   "app_name": "ARestro",
   "sign_up": "Sign Up",
-  "log_in": "Log In"
+  "log_in": "Log In",
+  "email": "Email",
+  "password": "Password",
+  "email_example":"example@gmail.com",
+  "enter_pass": "Enter Your Password",
+  "remember_me": "Remember Me",
+  "forget_pass": "Forget Password?",
+  "or_continue_with": "or continue with",
+  "login_with_google":"Login With Google",
+  "do_not_have_account": "Don`t have an account ? "
 }
