--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -10,6 +10,11 @@
   "forget_pass": "هل نسيت الرقم السري؟",
   "or_continue_with": "or continue with",
   "login_with_google":"تسجيل الدخول بجوجل",
-  "do_not_have_account": "هل لا تمتلك حساب ؟"
+  "signup_with_google":"انشاء حساب بجوجل",
+  "do_not_have_account": "هل لا تمتلك حساب ؟",
+  "create_an_account": "انشاء حساب",
+  "enter_your_username": "ادخل اسم المستخدم",
+  "enter_phone": "ادخل رقم التليفون",
+  "already_have_account":"هل لديك حساب؟"
 
 }
