--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -10,5 +10,10 @@
   "forget_pass": "Forget Password?",
   "or_continue_with": "or continue with",
   "login_with_google":"Login With Google",
-  "do_not_have_account": "Don`t have an account ? "
+  "signup_with_google":"SignUp With Google",
+  "do_not_have_account": "Don`t have an account ?",
+  "create_an_account": "Create an account",
+  "enter_your_username": "Enter Your Username",
+  "enter_phone": "Enter Your Phone Number",
+  "already_have_account":"Already have an account ?"
 }
