finish the design of the home section : - add list of foods and its item. -add list of restaurants and its item.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -33,7 +33,7 @@
   "we_are_here_with_the_west_wurgers_in_town": "نحن هنا مع أفضل البرغر في المدينة.",
   "search_for_food_restaurants": "ابحث عن الطعام والمطاعم...",
   "best_offers": "أفضل العروض",
-  "see_all": "عرض الكل",
+  "see_all": " < عرض الكل",
   "food": "طعام",
   "restaurants_nearby": "مطاعم قريبة",
   "restaurants": "مطاعم",
