--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,7 +33,7 @@
   "we_are_here_with_the_west_wurgers_in_town": "We are here with the Best Burgers in town.",
   "search_for_food_restaurants": "Search for food, restaurants...",
   "best_offers": "Best Offers",
-  "see_all": "See All",
+  "see_all": "See all  >",
   "food":"Food",
   "restaurants_nearby": "Restaurants Nearby",
   "restaurants": "Restaurants",
