finish the design of the search section : - add search text field and its button. -add list of restaurants results and its item.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -40,5 +40,6 @@
   "find_restaurant_nearby": "اعثر على مطعم قريب",
   "popular_restaurants": "مطاعم شهيرة",
   "search": "بحث",
-  "cart": "عربة التسوق"
+  "cart": "عربة التسوق",
+  "km_form_your_location": "كليو متر من موقغك"
 }
