add the design of the history screen. - add the design of the history screen. - add thr design of ongoing screen.

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -95,7 +95,12 @@
   "feedback": "ملاحظات",
   "terms_and_condition": "الشروط والأحكام",
   "privacy_policy": "سياسة الخصوصية",
-  "faqs": "الأسئلة الشائعة"
-
+  "faqs": "الأسئلة الشائعة",
+  "ongoing": "جاري",
+  "track_order": "تتبع الطلب",
+  "cancel": "الغاء",
+  "items": "عناصر",
+  "review": "مراجعة",
+  "reOrder": "اعادة الطلب"
 
 }
